	- fix: posible crash on shutdown
	- minor memory leak fixes
	- fix handling of fullscreen windows with shaped 
          window borders (Owen Marshall)
	- convert zh_CN.gb2312.po to UTF-8 (zh_CN.po) - lark@lark.net.cn
	- autodetect gnome/kde menu directories (Nehal Mistry)
	- fixed address bar behavior in various configurations
	- Hungarian translation update (Peter Somogyi)

1.2.7: 2003-03-08
	- minor bug fixes

1.2.7pre3: 2003-03-02
	- new option QuickSwitchGroupWorkspaces (if
          QuickSwitchToAllWorkspaces=1)
        - Italian translation update
	- more menu tweaks
	- implement NetWM window type SPLASH
	- ACPI status patch from Klaus Schneider
	- Made Alt+<left,right mouse button> behave in more standard manner
	- DoNotFocus window option added.

1.2.7pre2: 2003-02-26
	- Major improvement in percieved speed of menus
	- Dutch translation by Ton Kersten
	- add new options: ShowRun, ShowAbout, ShowWindowList,
          ShowLogoutSubMenu, AllowFullscreen (Ton Kersten)
	- support WM_WINDOW_ROLE, too
	- fix detection of netwm hints for some apps
	- fix AutoReloadMenus bug

1.2.7pre1: 2003-02-23
	- fix .order file handling for gnome menus (Thomas Zajic)
	- changed default theme to icedesert (Nehal Mistry)
	- fix crash in alt+tab when window closes
	- rewrite icewm.spec.in Christian W. Zuckschwerdt (zany@triq.net)
	- Belarussian translation by Hleb Valoska (el_globus@tut.by)
	- tweaked character set (CODESET) detection
	- 'Programs' menu is now invoked from menu file, not from the code
	- fixed fonts in Infadel2 theme when Xft is used

1.2.6: 2003-01-19
	- Slovenian translation by Jernej Kovacic
	- improve focus handling on non-xinerama multihead displays
	- another submenu/icon handling fix for gnome menus (Thomas Zajic)
	- added nonICCCMconfigureRequest window option workaround for 
          non ICCCM compliant applications
	- WINDOW_ROLE handling for winoptions (Stanislav Svirid)
	- fix crash in mail status checker in pop/imap configuration