@@ -459,7 +459,9 @@ YApplication::YApplication(int *argc, char ***argv, const char *displayName) {
     if (runSynchronized)
         XSynchronize(display(), True);
 
-#if CONFIG_XFREETYPE
+#if CONFIG_XFREETYPE >= 2
+    MSG(("Xft2, RENDER extension is optional with Xft2. haveXft: %d", haveXft));
+#elif CONFIG_XFREETYPE == 1
     int renderEvents, renderErrors;
 
     haveXft&= (XRenderQueryExtension(display(), &renderEvents, &renderErrors) &&
