@@ -8,6 +8,7 @@
 	- autodetect gnome/kde menu directories (Nehal Mistry)
 	- fixed address bar behavior in various configurations
 	- Hungarian translation update (Peter Somogyi)
+	- Xft2 doesn't require RENDER extension (Make Fabian)
 
 1.2.7: 2003-03-08
 	- minor bug fixes
